Fixed a 1px scrollbar in the TreeAdmin changelist

--- a/feincms3/static/feincms3/box-drawing.css
+++ b/feincms3/static/feincms3/box-drawing.css
@@ -2,6 +2,7 @@
   white-space: nowrap;
   position: relative;
   margin: -8px;
+  overflow: hidden;
 }
 
 .box-drawing {
